c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/union_initializers/initializer_too_long.c
/* A union initializer must always have exactly one element,
 * no matter how many members the union has.
 */

union u {
    int a;
    long b;
};

int main(void){
    union u x = {1, 2}; // invalid - multiple initializers
    return 0;
}
